--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,33 @@
+
+.login-page{
+  width: 100% !important;
+  height: 100vh;
+  width: fit-content;
+  background-image: url(https://images.unsplash.com/photo-1567401893414-76b7b1e5a7a5?q=80&w=1000&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8ZHJlc3MlMjBzaG9wfGVufDB8fDB8fHww);
+display: flex;
+justify-content: center;
+padding-top: 5%;
+}
+
+.login{
+
+height: 87%;
+width: 32%;
+background-color:rgba(216, 160, 19, 0.865);
+padding: 25px;
+border-radius: 10px;
+box-shadow: rgba(236, 237, 234, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+}
+
+.login form{
+  margin: 20px;
+  border: none;
+}
+
+ .logout{
+  width: 100px;
+  margin: 20px;
+ }
+ 
+
  
